1. Made a python script that solves the '/' issue (removes / from beginning of path (asset)) 2. source image issue solved

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <div class="profile float-right">
             <figure>
               <picture>
-                <source class="responsive-img-srcset" srcset="assets/img/prof_pic-480.webp 480w, assets/img/prof_pic-800.webp 800w, assets/img/prof_pic-1400.webp 1400w" type="image/webp">
+                <source class="responsive-img-srcset" srcset="assets/img/prof_pic.jpg, assets/img/prof_pic-800.webp 800w, assets/img/prof_pic-1400.webp 1400w" type="image/webp">
                 <img src="assets/img/prof_pic.jpg" class="img-fluid z-depth-1 rounded" alt="prof_pic" width="100%" height="auto">
               </picture>
             </figure>
