full text index

--- a/index.html
+++ b/index.html
@@ -104,9 +104,19 @@
 
           <div class="clearfix">
             <p>Hey, I’m Aayush.</p>
-            <p>I started this page with the intention of documenting all the awesome (and some not) stuff that I do so that it can help others and my future self.</p>
-            <p>A quick introduction-</p>
-            <p>I’m currently in my fourth year of B.Tech, pursuing Double Majors in Computer Science and Electrical Engineering, from IIT Kanpur...</p>
+
+<p>I started this page with the intention of documenting all the awesome (and some not) 
+stuff that I do so that it can help others and my future self.</p>
+
+<p>A quick introduction-</p>
+
+<p>I’m currently in my fourth year of B.Tech, pursuing Double Majors in Computer Science and Electrical Engineering, from IIT Kanpur. I like all things sciene and math, and I have done courses among all the levels of the tech stack, learning everyday and trying to find where my calling really lies.</p>
+
+<p>I really like Competitive Programming, although I’m struggling to be regular there nowadays, my CF handle is <a href="https://codeforces.com/profile/maejik" rel="external nofollow noopener" target="_blank"> maejik</a> .</p>
+
+<p>In the current semester, I’m doing CS330 (OS), 345 (Algorithms II), 340 (TOC), 690 (Computational Genomics) and a UGP focussed in Spatial Transcriptonomics. I’m also a Tutor in the course ESO207 (Data Structures and Algorithms).</p>
+
+<p>I’ll be spending my next summers as a SWE intern at Rubrik US.</p>
           </div>
         </article>
       </div>
